fix compileTestJava error